@@ -1,5 +1,13 @@
 2007-10-12  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file-private.h:
+        * libnautilus-private/nautilus-file.c:
+        * libnautilus-private/nautilus-icon-container.c:
+        * libnautilus-private/nautilus-thumbnails.[ch]:
+	Add back support for generating thumbnails.
+
+2007-10-12  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-directory-async.c:
         * libnautilus-private/nautilus-file-private.h:
         * libnautilus-private/nautilus-file.c:
